--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         </ul>
     </nav>
 
-   
+   <section id="about-us">
+
+        <h1>Nagłówek</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic in nemo culpa porro accusantium praesentium possimus beatae, earum quaerat eveniet iusto quidem labore qui a tempore rem cum neque! Accusantium.</p>
+
+   </section>
 
 </body>
 </html>
