--- a/index.html
+++ b/index.html
@@ -24,5 +24,15 @@
 
    </section>
 
+
+   <section id="skills">
+
+        <h1>Nagłówek</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis harum ipsam beatae placeat adipisci. Tenetur deserunt cum alias magnam officiis esse ipsum eaque omnis repellendus, quo aliquam cupiditate consequuntur eos?</p>
+
+
+    </section>
+
+
 </body>
 </html>
