--- a/index.html
+++ b/index.html
@@ -28,10 +28,31 @@
    <section id="skills">
 
         <h1>Nagłówek</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis harum ipsam beatae placeat adipisci. Tenetur deserunt cum alias magnam officiis esse ipsum eaque omnis repellendus, quo aliquam cupiditate consequuntur eos?</p>
+
+        <div class="skill">
+            <h2>nagłówek</h2>
+            <p>paragraf</p>
+        </div>
+
+        <div class="skill">
+            <h2>nagłówek</h2>
+            <p>paragraf</p>
+        </div>
+
+        <div class="skill">
+            <h2>nagłówek</h2>
+            <p>paragraf</p>
+        </div>
+
+        <div class="skill">
+            <h2>nagłówek</h2>
+            <p>paragraf</p>
+        </div>
 
 
     </section>
+
+
 
 
 </body>
