--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
    <section id="about-us">
 
-        <h1>Nagłówek</h1>
+        <h1>O nas</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic in nemo culpa porro accusantium praesentium possimus beatae, earum quaerat eveniet iusto quidem labore qui a tempore rem cum neque! Accusantium.</p>
 
    </section>
@@ -27,7 +27,7 @@
 
    <section id="skills">
 
-        <h1>Nagłówek</h1>
+        <h1>Umiejętności</h1>
 
         <div class="skill">
             <h2>nagłówek</h2>
@@ -49,6 +49,21 @@
             <p>paragraf</p>
         </div>
 
+
+    </section>
+
+    <section id="portfolio">
+        <h1>Portfolio</h1>
+
+        <div class="portfolio-item">
+            <img src="koteczek.jpg" alt="koteczek">
+        </div>
+        <div class="portfolio-item">
+            <img src="kotek.jpg" alt="kotek">
+        </div>    
+        <div class="portfolio-item">
+            <img src="kot.jpg" alt="kot">
+        </div>
 
     </section>
 
