--- a/index.html
+++ b/index.html
@@ -67,7 +67,25 @@
 
     </section>
 
+    <section id="contact">
 
+        <h1>Kotek  Kotkowy</h1>
+        <address>ul. Kotkowa 34 <br>
+                11-123 Kotów
+        </address><br>
+
+        <form action="">
+            <label for="name">Imię</label>
+            <input type="text" id="name" name="name" required><br><br>
+            <label for="subject">Temat:</label>
+            <input type="text" id="subject" name="subject" required><br><br>
+            <label for="message">Wiadomość</label>
+            <textarea name="message" id="message" cols="30" rows="10" required></textarea><br><br>
+
+            <input type="submit" value="Wyślij">
+          </form>
+
+    </section>
 
 
 </body>
